# pygroupf

./: LICENSE.txt  README.md  Tutorial.ipynb  pyproject.toml  run.py
.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
data/: processed_credit_data.csv  risk_report.csv
mypackage/: __init__.py
pygroupf/: test.py
pygroupf/pygroupf/: analysis.py  modeling.py  run.py
src/german_credit_analysis/: analysis.py  data_processing.py  modeling.py  run.py  visualization.py
src/pygroupf/: __about__.py  __init__.py  analysis.py  data_processing.py  modeling.py  processing-1.py  visualization.py
src/pygroupf/Black&flake8/: flake8_report_analysis.txt  flake8_report_data_processing.txt  flake8_report_modeling.txt  flake8_report_visualization.txt
tests/: __init__.py
